--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
   <div class="box">
     <div class="detail-box">
       <p>
-        "Grill magic! Exceptional meats grilled to perfection in a rustic charm, creating an unforgettable dining experience."      <h6>Srijan Gurung
+        Grill magic! Exceptional meats grilled to perfection in a rustic charm, creating an unforgettable dining experience.      <h6>Srijan Gurung
       </h6>
       <p></p>
     </div>
