--- a/special events.html
+++ b/special events.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <link rel="shortcut icon" href="images/favicon.png" type="">
+    <link rel="shortcut icon" href="images/Main_logo.png" type="">
     <title>Game Day Grill - Events</title>
     <!-- HubSpot Embed Code -->
     <!-- Start of HubSpot Embed Code -->
