--- a/specials.html
+++ b/specials.html
@@ -55,63 +55,67 @@
     <div class="bg-box">
       <img src="images/hero-bg.jpg" alt="">
     </div>
-     <!-- header section starts -->
-     <header class="header_section">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <span>
-              <img src="images/Main_logo.png" alt="Logo">
-            </span>
-          </a>
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class=""> </span>
-  </button>
-  
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item ">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="menu.html">Menu</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="specials.html">Specials</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="book.html">Book Table</a>
-      </li>
-       <!-- More Option with Dropdown -->
-       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">
-          More
+ <!-- Header Section -->
+ <div class="container">
+  <header class="header_section">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg custom_nav-container">
+        <!-- Navbar Brand -->
+        <a class="navbar-brand" href="index.html">
+          <span>
+            <img src="images/Main_logo.png" alt="Logo">
+          </span>
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
-                    <a class="dropdown-item" href="contact.html">Contact</a>
-                    <a class="dropdown-item" href="about.html">About</a>
-                    <a class="dropdown-item" href="team.html">Team</a>
-                    <a class="dropdown-item" href="special events.html">Events</a>
 
+        <!-- Navbar Toggler -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <!-- Add more items here as needed -->
+        <!-- Navbar Links -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto">
+            <!-- Your existing navigation items -->
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="menu.html">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="specials.html">Specials</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="book.html">Book Table</a>
+            </li>
+            <!-- More Option with Dropdown -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                More
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
+                <a class="dropdown-item" href="contact.html">Contact</a>
+                <a class="dropdown-item" href="about.html">About</a>
+                <a class="dropdown-item" href="team.html">Team</a>
+                <a class="dropdown-item" href="special-events.html">Events</a>
+                <!-- Add more items here as needed -->
+              </div>
+            </li>
+          </ul>
+          <div class="user_option">
+            <!-- Your existing user options go here -->
+            <a href="order_online.html" class="order_online">
+              Order Online
+            </a>
+          </div>
         </div>
-    </ul>
-    <div class="user_option">
-      <!-- Your existing user options go here -->
-      <a href="order_online.html" class="order_online">
-        Order Online
-      </a>
+      </nav>
     </div>
-  </div>
-  </nav>
-  </div>
   </header>
-  <!-- end header section -->
-  </div>
+</div>
+<!-- End Header Section -->
 
   <!-- food section -->
 
@@ -420,60 +424,101 @@
 
   <!-- end food section -->
 
-  <!-- footer section -->
-<footer class="footer_section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 footer-col">
-        <div class="footer_contact">
-          <h4>Contact Us</h4>
-          <div class="contact_link_box">
-            <a href="">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>Call +01 (800) GRILL-FUN</span>
-            </a>
-            <a href="">
-              <i class="fa fa-envelope" aria-hidden="true"></i>
-              <span>gamedaygrill@gmail.com</span>
-            </a>
+   <!-- footer section -->
+   <footer class="footer_section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 footer-col">
+          <div class="footer_contact">
+            <h4>
+              Contact Us
+            </h4>
+            <div class="contact_link_box">
+
+                </span>
+              </a>
+              <a href="">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <span>
+                  Call +01 (800) GRILL-FUN
+                </span>
+              </a>
+              <a href="">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <span>
+                  gamedaygrill@gmail.com
+                </span>
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 footer-col">
-        <div class="footer_detail">
-          <a href="#" class="footer-logo">
-            <!-- Replace the placeholder below with your logo image path -->
-            <img src="images/Main_logo.png" alt="Game Day Grill Logo">
-          </a>
-          <p></p>
-          <a href="mural.html" class="btn btn-primary">Mural</a> <!-- Button with link added here -->
-          <div class="footer_social">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
+        <div class="col-md-4 footer-col">
+          <div class="footer_detail">
+            <a href="#" class="footer-logo">
+              <!-- Replace the placeholder below with your logo image path -->
+              <img src="images/Main_logo.png" alt="Game Day Grill Logo">
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-pinterest" aria-hidden="true"></i>
-            </a>
+            <p>
+              
+            </p>
+            <div class="footer_social">
+              <a href="">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+              </a>
+              <a href="">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </a>
+              <a href="">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              </a>
+              <a href="">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+              </a>
+              <a href="">
+                <i class="fa fa-pinterest" aria-hidden="true"></i>
+              </a>
+            </div>
           </div>
         </div>
+        <div class="col-md-4 footer-col">
+          <h4>
+            Opening Hours
+          </h4>
+          <p>
+            Monday - Friday
+          </p>
+          <p>
+            8.00 Am -2.30 Pm
+          </p>
+        </div>
       </div>
-      <div class="col-md-4 footer-col">
-        <h4>Opening Hours</h4>
-        <p>Monday - Friday</p>
-        <p>8.00 Am -2.30 Pm</p>
+      <div class="footer-info">
+        <p>
+          &copy; <span id="displayYear"></span> This is a school project 
+        </p>
       </div>
     </div>
-    <div class="footer-info">
-      <p>&copy; <span id="displayYear"></span> This is a school project</p>
-    </div>
-  </div>
-</footer>
+  </footer>
+   <!-- jQery -->
+   <script src="js/jquery-3.4.1.min.js"></script>
+   <!-- popper js -->
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+   </script>
+   <!-- bootstrap js -->
+   <script src="js/bootstrap.js"></script>
+   <!-- owl slider -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+   </script>
+   <!-- isotope js -->
+   <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
+   <!-- nice select -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+   <!-- custom js -->
+   <script src="js/custom.js"></script>
+   <!-- Google Map -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
+   </script>
+   <!-- End Google Map -->
+ 
+ </body>
+ 
