--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/PRIMERIB123 (1).PNG" alt="">
+                  <img src="images/PRIMERIB123 (1).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
