--- a/specials.html
+++ b/specials.html
@@ -243,7 +243,7 @@
                     BBQ Bonanza
                   </h5>
                   <p>
-                    Includes a BBQ Bacon Cheddar Burger, Hickory-Smoked BBQ Pulled Pork sandwich, Cajun Fries and Choice of Pina Colata or Lemonade
+                    Includes a BBQ Bacon Cheddar Burger, Hickory-Smoked BBQ Pulled Pork sandwich, Cajun Fries and Choice of any drink.
                   </p>
                   <div class="options">
                     <h6>
